--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -226,23 +226,42 @@
   }
 
   li {
+    display: flex;
+    align-items: center;
+    gap: 0.35rem;
+    min-height: 44px;
+    margin-bottom: 0;
     white-space: nowrap;
+
+    @include breakpoint($large) {
+      min-height: 0;
+
+      & + li {
+        margin-top: 0.3rem;
+      }
+    }
   }
 
   a {
-    display: block;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    gap: 0.35rem;
+    box-sizing: border-box;
     min-height: 44px;
-    margin-bottom: 5px;
     margin-left: -0.35rem;
     margin-right: -0.35rem;
     border-radius: $border-radius;
-    padding-left: 0.35rem;
-    padding-right: 5px;
-    padding-top: 0.35rem;
-    padding-bottom: 0.35rem;
+    padding: 0.35rem;
     color: inherit;
     font-size: $type-size-5;
     text-decoration: none;
+
+    @include breakpoint($large) {
+      min-height: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
 
     &:hover {
       background: rgba($hermes-desaturated, 0.08);
